--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>双色球中奖查询</title>
+    <title>双色球号码查询</title>
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <link rel="apple-touch-icon" href="favicon.svg">
     <link rel="stylesheet" href="styles.css">
@@ -14,7 +14,7 @@
 <body>
     <div class="container">
         <header class="header">
-            <h1 class="title">🎯 双色球中奖查询</h1>
+            <h1 class="title">🎯 双色球号码查询</h1>
             <p class="subtitle">查询您的号码在历史开奖中的中奖情况，数据截止2013年1月1日
             </p>
         </header>
